--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,16 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <!-- Разрешения для работы с Bluetooth -->
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+
+    <!-- Разрешения для определения местоположения (нужно для Bluetooth Scan) -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
@@ -19,26 +29,41 @@
         android:theme="@style/Theme.TamyrApp2"
         tools:targetApi="31">
 
-    <!-- Главный экран -->
-    <activity
-        android:name=".MainActivity"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+        <!-- Главный экран -->
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    <!-- Экран регистрации -->
-    <activity
-        android:name=".RegisterActivity"
-        android:exported="true" /> <!-- Должен быть экспортирован, если вызывается из других компонентов -->
+        <!-- Экран регистрации -->
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:exported="true" />
 
-    <!-- Экран логина -->
-    <activity
-        android:name=".LoginActivity"
-        android:exported="true" />
+        <!-- Экран логина -->
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="true" />
 
-</application>
+        <!-- Экран подключения Mi Band -->
+        <activity
+            android:name=".ui.MiBandActivity"
+            android:exported="true" />
 
-    </manifest>
+        <!-- Экран данных Mi Band -->
+        <activity
+            android:name=".ui.MiBandDataActivity"
+            android:exported="true" />
+
+        <!-- Экран выбора устройства -->
+        <activity
+            android:name=".ui.SelectDeviceActivity"
+            android:exported="false"/>
+
+
+    </application>
+</manifest>
