--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,26 +19,34 @@
         android:theme="@style/Theme.TamyrApp2"
         tools:targetApi="31">
 
-    <!-- Главный экран -->
-    <activity
-        android:name=".MainActivity"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+        <activity
+            android:name=".UI.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    <!-- Экран регистрации -->
-    <activity
-        android:name=".RegisterActivity"
-        android:exported="true" /> <!-- Должен быть экспортирован, если вызывается из других компонентов -->
+        <!-- Экран регистрации -->
+        <activity
+            android:name=".UI.RegisterActivity"
+            android:exported="true" />
 
-    <!-- Экран логина -->
-    <activity
-        android:name=".LoginActivity"
-        android:exported="true" />
+        <!-- Экран логина -->
+        <activity
+            android:name=".UI.LoginActivity"
+            android:exported="true" />
 
-</application>
+        <!-- Экран главной страницы -->
+        <activity
+            android:name=".UI.HomeActivity"
+            android:exported="true" />
+
+        <!-- Экран анкеты пользователя -->
+        <activity
+            android:name=".UI.PersonalInfoActivity"
+            android:exported="true" />
+    </application>
 
     </manifest>
