--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
         <activity
             android:name=".ui.SelectDeviceActivity"
             android:exported="false"/>
+        <activity
+            android:name=".ui.HomeActivity"
+            android:exported="true" />
+
 
 
     </application>
