--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <!-- Разрешения -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -16,7 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TamyrApp2"
+        android:theme="@style/Base.Theme.TamyrApp2"
         tools:targetApi="31">
 
         <activity
@@ -59,6 +61,11 @@
         <activity
             android:name=".UI.SettingsActivity"
             android:exported="true"/>
+
+        <activity
+            android:name=".UI.ProfileActivity"
+            android:exported="true" />
+
 
     </application>
 
